--- a/features/in-app-purchases/android-products.mdx
+++ b/features/in-app-purchases/android-products.mdx
@@ -31,6 +31,7 @@ Before creating subscription products, make sure you have:
   </Step>
 </Steps>
 
+<Steps>
   <Step title="Configure Product Details">
     ### Tips for creating robust product IDs
 
