--- a/quickstart/app-configuration.mdx
+++ b/quickstart/app-configuration.mdx
@@ -63,5 +63,5 @@ You'll need to modify these settings in your project's `app.json` file:
 ### Step 2: Customize App Icons and Splash Screens
 
 <Info>
-  Replace the default icons and splash screens in `assets/images/` with your own. See the [App Icons Guide](/features/customization/app-icons) for creating custom assets with AI.
+  Replace the default icons and splash screens in `assets/images/` with your own. See the [App Icons Guide](/features/app-icons) for creating custom assets with AI.
 </Info>
