--- a/features/in-app-purchases/android-products.mdx
+++ b/features/in-app-purchases/android-products.mdx
@@ -7,8 +7,8 @@ description: "Create subscription products in Google Play Console for your Andro
 
 Before creating subscription products, make sure you have:
 
-- Completed the [Closed testing setup](./closed-testing) for your app
-- Access to your app's Google Play Console
+- Completed the [Google Play Console Setup](./google-play-console-setup) for your app
+- Set up [Closed Testing](./closed-testing) for your app
 - Your app uploaded and approved for testing
 
 ## Create a Subscription
