--- a/features/in-app-purchases/import-products-rc.mdx
+++ b/features/in-app-purchases/import-products-rc.mdx
@@ -8,8 +8,9 @@ description: "Import your subscription products from app stores into RevenueCat 
 Before importing products to RevenueCat, make sure you have:
 
 - Completed the [RevenueCat setup](./revenuecat)
-- Created subscription products in [Google Play Console](./android-products) and/or [App Store Connect](./ios-products)
-- Your products are in "Ready to Submit" or "Published" status
+- Created [Android products](./android-products) in Google Play Console
+- Created [iOS products](./ios-products) in App Store Connect
+- Tested your purchases with [Android closed testing](./closed-testing) or [iOS sandbox testing](./ios-sandbox)
 
 ## Configure Entitlements
 
