--- a/features/in-app-purchases/revenuecat.mdx
+++ b/features/in-app-purchases/revenuecat.mdx
@@ -7,9 +7,10 @@ description: "Set up RevenueCat for managing in-app purchases and subscriptions 
 
 Before setting up RevenueCat, make sure you have:
 
-- Configured your apps in App Store Connect and/or Google Play Console
-- The same bundle ID and package name for both platforms
-- Access to your Apple Developer and Google Play Console accounts
+- Completed the [Google Play Console Setup](./google-play-console-setup) for Android
+- Completed the [App Store Connect Setup](./app-store-connect-setup) for iOS
+- Created [Android products](./android-products) and/or [iOS products](./ios-products)
+- The same bundle ID and package name for both platforms if you're supporting both
 
 ## Create RevenueCat Account
 
@@ -166,9 +167,8 @@ After completing the setup, verify that:
 
 With RevenueCat configured, you can now:
 
-- [Create subscription products](./ios-products) in App Store Connect
-- [Create subscription products](./android-products) in Google Play Console
-- [Import products into RevenueCat](./import-products-rc)
+- [Import your products into RevenueCat](./import-products-rc)
+- [Configure Superwall](./superwall) for paywall management
 
 ## Additional Resources
 
