--- a/features/auth/apple-auth.mdx
+++ b/features/auth/apple-auth.mdx
@@ -207,7 +207,7 @@ Install the new EAS build on your device.
 
 To test your Apple Sign-In configuration:
 
-1. Rebuild and run your app using a development build (Apple Sign-In doesn't work in Expo Go)
+1. Rebuild development build
 2. Navigate to the sign-in screen
 3. Tap the "Sign in with Apple" button
 4. Complete the Apple authentication flow
