--- a/features/auth/google-auth.mdx
+++ b/features/auth/google-auth.mdx
@@ -258,18 +258,11 @@ Once you've completed these steps, the Google Sign-In button will appear in the 
 
 ## Testing Your Configuration
 
-<Info>
-  You must create a development build to test Google Sign-In functionality, as native authentication features won't work in Expo Go.
-</Info>
-
-After creating a development build, test your Google Sign-In configuration:
-
-1. Make sure you have added all the environment variables to your app
-2. Run your app using the development build
-3. Navigate to the sign-in screen
-4. Tap the "Sign in with Google" button
-5. Complete the Google authentication flow
-6. Verify that you are successfully signed in to your app
+1. Rebuild development build and open it on your device
+2. Navigate to the sign-in screen
+3. Tap the "Sign in with Google" button
+4. Complete the Google authentication flow
+5. Verify that you are successfully signed in to your app
 
 ## Additional Resources
 
