--- a/quickstart/supabase-setup.mdx
+++ b/quickstart/supabase-setup.mdx
@@ -47,29 +47,20 @@ EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
    - In your Supabase dashboard, navigate to **Authentication** → **URL Configuration**
    - Configure the following settings:
 
-#### For Expo Go Testing
+#### Development Build Configuration
 
-When testing with Expo Go during initial development:
+Configure the URL settings for your development build:
 
 1. **Site URL**: 
-   - Set to `exp://127.0.0.1:8081`
+   - Set to your app scheme (e.g., `myapp://`)
 
 2. **Redirect URLs**:
-   - Add `exp://127.0.0.1:8081/**`
+   - Add `myapp://**` (replace 'myapp' with your actual app scheme)
 
 <Tip>
-  This configuration is for initial development with Expo Go. You'll update these URLs with your app's scheme when creating a development build later.
+  If you want to quickly test the app with Expo Go before moving to development builds:
+  1. Go to **Authentication** → **Email Templates**
+  2. Toggle off **Enable email confirmations**
+  
+  This is only for initial Expo Go testing. We'll create a proper development build with EAS in the next section.
 </Tip>
-
-### Testing Basic Auth
-
-Let's verify the setup with a basic email/password test:
-
-1. **Run your app** in development mode
-2. **Navigate to the sign-up screen**
-3. **Create a test account** using email/password
-4. **Check your email** for a confirmation link
-5. **Open the confirmation link** on your phone
-6. **Click 'Allow'** when your browser prompts you to open your app
-
-If the authentication flow works successfully, you'll be automatically signed in.
